# ggml-cuda-experiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conv2d.cu  flash-attn.cu  ggml_conv2d.c  run.sh  test.bat
ggml/: CMakeLists.txt  ggml.c
ggml/ggml/: ggml.h
src/: cuda_info.h  flash-llama.h  flash-matrix.cu  flash_row_float.h  kernel_test.h  tensor-core.cu  tensor-mma.h  utils.h
src/misc/: coalescing.cu  cudaTensorCoreGemm.cu  flash-attn.cu  shared-memory.cu  simpleCooperativeGroups.cu  tc-test.cu
